--- a/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
+++ b/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
@@ -15,43 +15,51 @@
     <ScrollViewer 
         VerticalScrollBarVisibility="Auto" 
         HorizontalScrollBarVisibility="Auto">
-        <Border BorderThickness="10" BorderBrush="#FF5C7590" >
-            <Grid Background="#FF5C7590">
+            <Grid>
+            	<Grid.Background>
+            		<RadialGradientBrush RadiusX="1.01" RadiusY="1.1" Center="0.002,-0.001" GradientOrigin="-0.001,-0.006">
+            			<GradientStop Color="Black" Offset="0"/>
+            			<GradientStop Color="White" Offset="1"/>
+            		</RadialGradientBrush>
+            	</Grid.Background>
                 <!--Create Grid with two rows and two columns-->
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="60"/>
                     <RowDefinition/>
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
                 <TextBlock 
                     Grid.Row="0" 
+					Grid.Column="1"
                     Grid.ColumnSpan="2"
-                    FontFamily="Arial"
+                    FontFamily="Verdana"
                     FontSize="24"
                     Foreground="White"
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Top">
+                    HorizontalAlignment="Left" 
+                    VerticalAlignment="Center" Margin="20,0,0,0">
                     Virtual Photonics General-Purpose ATK (CTP 2.0)
                 </TextBlock>
-                <!--<Image 
-                    Source="/Resources/Images/vpbanner.jpg"
+                <Image 
+                    Source="/Vts.SiteVisit;Component/Resources/Images/logo-small.png"
                     Grid.Row="0" 
-                    Grid.ColumnSpan="2"
-                    Height="20"
-                    Stretch="Uniform"
-                    HorizontalAlignment="Left"/>-->
+                    Grid.ColumnSpan="1"
+                    Height="50"
+                    Stretch="None"
+					VerticalAlignment="Center"
+                    HorizontalAlignment="center"/>
 
                 <controls:TabControl x:Name="inputTabControl" SelectionChanged="inputTabControl_SelectionChanged"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"  
                     Grid.Row="1"
-                    Grid.Column="0"
+                    Grid.Column="1"
                     Width="455">
                     <controls:TabItem Name="tabForward" Header="Forward/Analysis Panel">
                         <local:ForwardSolverView
@@ -87,8 +95,8 @@
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"  
                     Grid.Row="1"
-                    Grid.Column="1"
-                    Grid.RowSpan="3">
+                    Grid.Column="2"
+                    Grid.RowSpan="2" Margin="10,0,0,0">
                     <controls:TabItem Name="tabPlot" Header="Plot View">
                         <local:PlotView
                             DataContext="{Binding PlotVM}"
@@ -104,10 +112,9 @@
                 <local:TextOutputView
                     DataContext="{Binding TextOutputVM}"
                     VerticalAlignment="Top"
+					Grid.Column="1"
                     Grid.Row="3" 
                     Grid.ColumnSpan="2" />
             </Grid>
-        </Border>
-
     </ScrollViewer>
 </UserControl>
