--- a/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
@@ -8,8 +8,8 @@
     xmlns:charting="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
     HorizontalAlignment="Left" VerticalAlignment="Top">
 
-    <StackPanel>
-        <charting:Chart x:Name="myChart" Width="550"  Height="400" Background="White"
+    <StackPanel Background="White">
+        <charting:Chart x:Name="myChart" Width="515"  Height="400" Background="White"
                 vm:ChartHelper.DependentValueBinding="Y"
                 vm:ChartHelper.IndependentValueBinding="X"
                 vm:ChartHelper.Title="TitlePropertyOnCollection"
@@ -23,7 +23,7 @@
             </charting:Chart.Axes>
         </charting:Chart>
 
-        <StackPanel Orientation="Horizontal" Background="White">
+        <StackPanel Orientation="Horizontal" Background="White" Margin="0,5,0,0">
             
             <StackPanel Orientation="Vertical" VerticalAlignment="Top" Margin="2,0,10,0">
                 <CheckBox Content="Hold On" IsChecked="{Binding HoldOn, Mode=TwoWay}" Margin="0,5,0,0"/>
@@ -39,7 +39,7 @@
                         Width="80" Height="20" Margin="0,5,0,0"/>
             </StackPanel>
             
-            <StackPanel Orientation="Vertical" Margin="2,0,10,0">
+            <StackPanel Orientation="Vertical" Margin="5,0,10,0">
                 <StackPanel Orientation="Horizontal" Margin="0">
                     <TextBlock Text="X Axis Spacing: " VerticalAlignment="Center"/>
                     <v:RadioButtonOptionView DataContext="{Binding XAxisSpacingOptionVM}" />
@@ -54,7 +54,7 @@
                 </StackPanel>
             </StackPanel>
             
-            <StackPanel Orientation="Vertical" Margin="2,0,10,0">
+            <StackPanel Orientation="Vertical" Margin="5,0,0,0">
                 
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Plot Label:" VerticalAlignment="Center"/>
