--- a/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
+++ b/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
@@ -24,21 +24,21 @@
             	</Grid.Background>
                 <!--Create Grid with two rows and two columns-->
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="70"/>
                     <RowDefinition/>
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="60"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto" MinWidth="375" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
                 <TextBlock 
                     Grid.Row="0" 
 					Grid.Column="1"
-                    Grid.ColumnSpan="2"
+					Grid.ColumnSpan="2"
                     FontFamily="Verdana"
                     FontSize="24"
                     Foreground="White"
@@ -49,7 +49,6 @@
                 <Image 
                     Source="/Vts.SiteVisit;Component/Resources/Images/logo-small.png"
                     Grid.Row="0" 
-                    Grid.ColumnSpan="1"
                     Height="50"
                     Stretch="None"
 					VerticalAlignment="Center"
@@ -59,8 +58,10 @@
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"  
                     Grid.Row="1"
-                    Grid.Column="1"
-                    Width="455">
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Margin="5,0,0,0"
+                    Width="435">
                     <controls:TabItem Name="tabForward" Header="Forward/Analysis Panel">
                         <local:ForwardSolverView
                             DataContext="{Binding ForwardSolverVM}"
@@ -96,7 +97,9 @@
                     VerticalAlignment="Top"  
                     Grid.Row="1"
                     Grid.Column="2"
-                    Grid.RowSpan="2" Margin="10,0,0,0">
+                    Grid.RowSpan="2" 
+                    Margin="5,0,0,0"
+                    Width="530">
                     <controls:TabItem Name="tabPlot" Header="Plot View">
                         <local:PlotView
                             DataContext="{Binding PlotVM}"
@@ -112,9 +115,9 @@
                 <local:TextOutputView
                     DataContext="{Binding TextOutputVM}"
                     VerticalAlignment="Top"
-					Grid.Column="1"
+					Grid.Column="0"
                     Grid.Row="3" 
-                    Grid.ColumnSpan="2" />
+                    Grid.ColumnSpan="3" Margin="5,0,0,0" />
             </Grid>
     </ScrollViewer>
 </UserControl>
