--- a/src/Vts.SiteVisit/App.xaml
+++ b/src/Vts.SiteVisit/App.xaml
@@ -4,6 +4,10 @@
              x:Class="Vts.SiteVisit.App"
              xmlns:converters="clr-namespace:Vts.SiteVisit.Converters">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/ControlResourceDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
         <converters:BooleanToVisibilityConverter x:Key="myBooleanToVisibilityConverter"/>
         <converters:DoubleToStringConverter x:Key="myDoubleToStringConverter"/>
         <!-- Default style for line series based on the MSPL open-source default here: http://silverlight.codeplex.com/SourceControl/changeset/view/18791#507649
@@ -138,7 +142,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-
+        </ResourceDictionary>
     </Application.Resources>
     
 </Application>
