Fixed the issue with the 0 not being centered and +rho_max being off the screen

--- a/src/Vts.SiteVisit/View/Application/Panels/MapView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MapView.xaml
@@ -19,13 +19,13 @@
             <ColumnDefinition MinWidth="400"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="1">
+        <Grid Grid.Row="0" Grid.Column="1" ShowGridLines="False">
             <Grid.RowDefinitions>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition MinWidth="350"/>
+                <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="0" Text="-rho_max" HorizontalAlignment="Left"/>
