--- a/src/Vts.SiteVisit/Resources/ChartResourceDictionary.xaml
+++ b/src/Vts.SiteVisit/Resources/ChartResourceDictionary.xaml
@@ -21,7 +21,7 @@
 
     <Style x:Name="MyScientificAxisLabelStyle" TargetType="charting:AxisLabel">
         <Setter Property="IsTabStop" Value="False" />
-        <Setter Property="StringFormat" Value="{}{0:0.0e-0##;;0}" />
+        <Setter Property="StringFormat" Value="{}{0:0.##e-0;;0}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="charting:AxisLabel">
