--- a/src/Vts.SiteVisit/App.xaml
+++ b/src/Vts.SiteVisit/App.xaml
@@ -1,15 +1,17 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              x:Class="Vts.SiteVisit.App"
-             xmlns:converters="clr-namespace:Vts.SiteVisit.Converters">
+             xmlns:converters="clr-namespace:Vts.SiteVisit.Converters"
+             xmlns:local="clr-namespace:Vts.SiteVisit.Extensions">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/ControlResourceDictionary.xaml" />
                 <ResourceDictionary Source="Resources/ChartResourceDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
-        <converters:BooleanToVisibilityConverter x:Key="myBooleanToVisibilityConverter"/>
-        <converters:DoubleToStringConverter x:Key="myDoubleToStringConverter"/>
+            <converters:BooleanToVisibilityConverter x:Key="myBooleanToVisibilityConverter"/>
+            <converters:DoubleToStringConverter x:Key="myDoubleToStringConverter"/>
+            <local:LocalizedStrings x:Key="LocalizedStrings" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
