--- a/src/Vts.SiteVisit/View/Application/Panels/ForwardSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/ForwardSolverView.xaml
@@ -6,7 +6,18 @@
     xmlns:input="clr-namespace:SLExtensions.Input;assembly=SLExtensions" VerticalAlignment="Top">
 
     <StackPanel Orientation="Vertical" VerticalAlignment="Top">
-        <v:ComboBoxOptionView  DataContext="{Binding ForwardSolverTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Fwd Solver Engine:" FontSize="12" FontWeight="Bold" Margin="3,3" />
+            <v:ComboBoxOptionView Grid.Row="0" Grid.Column="1"  DataContext="{Binding ForwardSolverTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        </Grid>
         <StackPanel Orientation="Horizontal" Visibility="{Binding IsGaussianForwardModel, Converter={StaticResource myBooleanToVisibilityConverter}}" Margin="5">
             <TextBlock Text="Gaussian Beam Diameter:" Margin="3" VerticalAlignment="Bottom"/>
             <TextBox Width="40" Margin="3" Text="{Binding ForwardSolver.BeamDiameter, Mode=TwoWay}" VerticalAlignment="Bottom"/>
