--- a/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
+++ b/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
@@ -62,7 +62,7 @@
                     Grid.ColumnSpan="2"
                     Margin="5,0,0,0"
                     Width="435">
-                    <controls:TabItem Name="tabForward" Header="Forward/Analysis Panel">
+                    <controls:TabItem Name="tabForward" Header="Forward Solver/Analysis Panel">
                         <local:ForwardSolverView
                             DataContext="{Binding ForwardSolverVM}"
                             Background="LightSteelBlue"/>
