--- a/src/Vts.SiteVisit/View/Controls/RangeView.xaml
+++ b/src/Vts.SiteVisit/View/Controls/RangeView.xaml
@@ -18,7 +18,7 @@
         <StackPanel x:Name="LayoutRoot"  Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Top">
             <StackPanel Orientation="Vertical" Margin="5,0,5,0" >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <TextBlock Text="Start ["/>
+                    <TextBlock Text="Begin ["/>
                     <TextBlock Text="{Binding Units}" />
                     <TextBlock Text="]"/>
                 </StackPanel>
@@ -27,7 +27,7 @@
 
             <StackPanel Orientation="Vertical" Margin="5,0,5,0">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <TextBlock Text="Stop ["/>
+                    <TextBlock Text="End ["/>
                     <TextBlock Text="{Binding Units}" />
                     <TextBlock Text="]"/>
                 </StackPanel>
