Working demo of MC running in VTS GUI Fixed angle definition crashing ROfRhoAndTAndAngleTally

--- a/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
@@ -44,9 +44,7 @@
         <StackPanel Orientation="Horizontal">
             
             <!--<v:OptionControlView DataContext="{Binding ForwardAnalysisTypeViewModel}" HorizontalAlignment="Left" VerticalAlignment="Top"/>-->
-            <Button VerticalAlignment="Bottom"
-                input:CommandService.Command="MC_ExecuteMonteCarloSolver"
-                input:CommandService.CommandParameter="{Binding}"
+            <Button VerticalAlignment="Bottom" Command="{Binding ExecuteMonteCarloSolverCommand}"
                 Background="{Binding StackPanel.Background}" Content="Run Monte Carlo"  
                 Width="100" Height="30" Margin="5"/>
         </StackPanel>
