Added a new folder for FEM solvers Created a new panel for 2D MG RTE solver
--HG--
branch : jr-110527-2d_MGRTE_restructuring

--- a/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
+++ b/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
@@ -89,8 +89,13 @@
                         <local:MonteCarloSolverView
                             DataContext="{Binding MonteCarloSolverVM}"
                             Background="LightSteelBlue"/>
-                    </controls:TabItem>
-                </controls:TabControl>
+                </controls:TabItem>
+                <controls:TabItem Header="FEM Solver Panel">
+                    <local:FemSolverView
+                            DataContext="{Binding FemSolverVM}"
+                            Background="LightSteelBlue"/>
+                </controls:TabItem>
+            </controls:TabControl>
 
                 <controls:TabControl x:Name="outputTabControl"
                     HorizontalAlignment="Left"
